--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -21,6 +21,17 @@
     border: none;
 }
 
+.settings{
+    color:rgb(255, 149, 0);
+    background-color: transparent;
+    border: none;
+    font-size: 2.5vw;
+    position: absolute; 
+    top: 2vh;
+    left: 1.5vw;
+    cursor: pointer;
+}
+
 .row{
     display: flex;
     width: 38vw;
