--- a/src/styles/Modal.css
+++ b/src/styles/Modal.css
@@ -10,7 +10,7 @@
     padding: 2vw;
     border-radius: 8px;
     z-index: 1000;
-    border: 4px solid rgb(255, 145, 0);
+    border: 0.7vw solid rgb(255, 145, 0);
   }
 
   .close{
@@ -20,6 +20,7 @@
     top: 1vw; 
     right: 1vw;
     cursor: pointer;
+    color:#ff8800;
   }
 
 .gameOver-title,
@@ -57,4 +58,59 @@
   background-repeat: no-repeat;
   background-position: center;
   border: none;
+}
+
+@media (max-width: 480px) {
+  .modal {
+    position: absolute;
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    place-self: center;
+    justify-content: center;
+    align-items: center;
+    background-color: #001b2cc6;
+    padding: 2vw;
+    border-radius: 8px;
+    z-index: 1000;
+    border: 3px solid rgb(255, 145, 0);
+  }
+  .gameOver-title,
+  .gameOver-massage{
+  color:#ff8800;
+  font-size: 4vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.gameOver-title{
+  font-size: 4.5vw;
+}
+
+.restart-button{
+  margin-top: 2vw;
+  width: 12vw;
+  height: 3.5vw;
+  background-color: #0000008a;
+  border: 1.5px solid rgb(255, 145, 0);
+  border-radius: 0.4vw;
+  color:#ff8800;
+  font-size: 2.5vw;
+  cursor: pointer;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-evenly;
+}
+
+.button-icon{
+  background-color: transparent;
+  width: 3vw;
+  height: 3vw;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  border: none;
+}
+
 }
