--- a/src/styles/Rules.css
+++ b/src/styles/Rules.css
@@ -80,3 +80,55 @@
     display: flex;
     flex-direction: column;
 }
+
+@media (max-width: 480px) {
+    .rules{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .intro-text,
+    .rules-text{
+        width: 40vw;
+        height: 5vw;
+        text-align: justify; 
+    }
+
+    .pumpkin-guide{
+        background-color: transparent;
+        width:17vw;
+        height:17vw;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        border: none;
+        margin-left: 4vw;
+    }
+    
+    .speech-buble{
+        margin-top:1vw;
+        margin-left:5vw;
+        place-self: center;
+        width: 55vw;
+        height: 35vw;
+        background-image: url('../icons-images/speech-buble.png'); 
+        background-size: cover;  
+        background-position: center;
+        color: rgb(255, 153, 0); 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .text{
+        display: flex;
+        flex-direction: column;
+        place-self: center;
+        font-size: 1.3vw;
+        align-items: center;
+        justify-content: center;
+        margin-left: 4vw;
+        margin-bottom: 3.5vw;
+    }
+    
+  }
