--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -63,6 +63,7 @@
     position: absolute; 
     top: 2vh;
     right: 1.5vw;
+    color:rgb(255, 149, 0);
 }
 
 .timer{
@@ -70,4 +71,64 @@
     position: absolute; 
     top: 6vh;
     right: 1.5vw;
+    color:rgb(255, 149, 0);
 }
+
+@media (max-width: 480px) {
+    .game-field{
+        display:flex;
+        width: 70vw;
+        height: 70vw;
+        justify-content: space-evenly;
+        background-color: rgba(237, 158, 23, 0.592);
+        flex-wrap: wrap;
+    }
+    .row{
+        display: flex;
+        width: 70vw;
+        justify-content: space-around;
+    }
+
+    .icon{
+        background-color: transparent;
+        width:5vw;
+        height:5vw;
+        margin-left: 0.2vw;
+        margin-right: 0.2vw;
+        cursor: pointer; 
+        color:black;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        border: none;
+    }
+
+    .settings{
+        color:rgb(255, 149, 0);
+        background-color: transparent;
+        border: none;
+        font-size: 4vw;
+        position: absolute; 
+        top: 2vh;
+        left: 1.5vw;
+        cursor: pointer;
+    }
+
+    .score{
+        display: flex;
+        position: absolute; 
+        font-size: 4vw;
+        top: 2vh;
+        right: 1.5vw;
+        color:rgb(255, 149, 0);
+    }
+    
+    .timer{
+        display: flex;
+        position: absolute; 
+        font-size: 4vw;
+        top: 6vh;
+        right: 1.5vw;
+        color:rgb(255, 149, 0);
+    }
+  }
