--- a/src/styles/settings.css
+++ b/src/styles/settings.css
@@ -1,9 +1,123 @@
-.music-icon,
 .volume-icon{
+   margin-right:1vw;
     color:rgb(255, 149, 0);
     background-color: transparent;
+    width: 2vw;
+    height: 2vw;
 }
 .settings-form{
-    width: 20vw;
-    height:15vw;
+  padding: 1.5vw;
+    width: 15vw;
+    height: 10vw;
 }
+.music-image{
+    color:rgb(255, 149, 0);
+    background-color: transparent;
+    width: 2vw;
+    height: 2vw;
+    margin-right:1vw;
+}
+
+.sound,
+.music{
+    display: flex;
+    justify-content: space-evenly;
+    margin: 0.5vw;
+    align-items: center; 
+}
+
+.volume-slider {
+    width: 8vw;
+    height: 0.5vw;
+    background: rgb(255, 157, 19);
+    outline: none;
+    border-radius: 2vw; 
+    cursor: pointer;
+    -webkit-appearance: none; 
+    appearance: none; 
+  }
+  
+  .volume-slider::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 0.5vw;
+    background: rgb(255, 157, 19);
+    border-radius: 2vw;
+  }
+  
+  .volume-slider::-webkit-slider-thumb {
+    -webkit-appearance: none; 
+    appearance: none;
+    width: 1.9vw;
+    height: 1.9vw;
+    background: url('../icons-images/pumpkin-button.png');
+    background-size: cover; 
+    box-shadow: 8px 2px 8px rgba(0, 0, 0, 0.912); 
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    border-radius: 50%;
+    margin-top: -0.70vw;
+  }
+
+  @media (max-width: 480px) {
+    .volume-icon{
+      margin-right:1vw;
+       color:rgb(255, 149, 0);
+       background-color: transparent;
+       width: 4vw;
+       height: 4vw;
+   }
+   .settings-form{
+     padding: 3vw;
+       width: 30vw;
+       height: 20vw;
+   }
+   .music-image{
+       color:rgb(255, 149, 0);
+       background-color: transparent;
+       width: 4vw;
+       height: 4vw;
+       margin-right:1vw;
+   }
+   
+   .sound,
+   .music{
+       display: flex;
+       justify-content: space-evenly;
+       margin: 0.5vw;
+       align-items: center; 
+   }
+   
+   .volume-slider {
+       width: 15vw;
+       height: 1vw;
+       background: rgb(255, 157, 19);
+       outline: none;
+       border-radius: 2vw; 
+       cursor: pointer;
+       -webkit-appearance: none; 
+       appearance: none; 
+     }
+     
+     .volume-slider::-webkit-slider-runnable-track {
+       width: 100%;
+       height: 1vw;
+       background: rgb(255, 157, 19);
+       border-radius: 2vw;
+     }
+     
+     .volume-slider::-webkit-slider-thumb {
+       -webkit-appearance: none; 
+       appearance: none;
+       width: 3.5vw;
+       height: 3.5vw;
+       background: url('../icons-images/pumpkin-button.png');
+       background-size: cover; 
+       box-shadow: 1.5vw 0.5vw 2vw rgba(0, 0, 0, 0.912); 
+       border: none;
+       background-color: transparent;
+       cursor: pointer;
+       border-radius: 50%;
+       margin-top: -1.5vw;
+     }
+  }
