--- a/src/styles/Rules.css
+++ b/src/styles/Rules.css
@@ -131,5 +131,18 @@
         height: 27vw;
         justify-content: space-evenly;
     }
-    
+  }
+
+  @media (orientation: landscape) {
+    .text{
+        display: flex;
+        flex-direction: column;
+        place-self: center;
+        font-size: 1.2vw;
+        align-items: center;
+        margin-left: 4vw;
+        margin-bottom: 3.5vw;
+        height: 20vw;
+        justify-content: space-evenly;
+    }
   }
